Styling of sidebar fixed might be bad on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,12 @@
 .mainTest {
   display: flex;
   width: 100%;
+  margin-left: 40px;
+  transition: 0.5s ease-in-out;
+}
+
+.mainTest.true {
+  margin-left: 220px;
 }
 
 body {
