--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -34,7 +34,7 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   position: fixed;
   bottom: 0;
-  z-index: 9999;
+  z-index: 100;
   height: 20px;
   width: 100%;
   font-size: 0.55rem;
