--- a/src/styles/projectcomponent.css
+++ b/src/styles/projectcomponent.css
@@ -5,7 +5,7 @@
   gap: 0.8rem;
   border: 2px solid #9cdcfe;
   padding: 10px;
-  /* min-width: 250px; */
+  min-width: 250px;
 }
 
 .projectHeading {
